--- a/Surfaces/Surfaces.vcxproj
+++ b/Surfaces/Surfaces.vcxproj
@@ -19,8 +19,12 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="..\Src\curves\Curve.h" />
+    <ClInclude Include="..\Src\curves\HermiteSpline.h" />
+    <ClInclude Include="..\Src\curves\LinearSpline.h" />
     <ClInclude Include="..\Src\surfaces\GLSurface.h" />
     <ClInclude Include="..\Src\surfaces\Grid.h" />
+    <ClInclude Include="..\Src\surfaces\HermiteSurface.h" />
     <ClInclude Include="..\Src\surfaces\Surface.h" />
     <ClInclude Include="..\Src\utils\GLCheck.h" />
     <ClInclude Include="..\Src\utils\Logger.h" />
@@ -29,9 +33,12 @@
     <ClInclude Include="..\Src\viewer\Viewer.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="..\Src\curves\HermiteSpline.cpp" />
+    <ClCompile Include="..\Src\curves\LinearSpline.cpp" />
     <ClCompile Include="..\Src\Main.cpp" />
     <ClCompile Include="..\Src\surfaces\GLSurface.cpp" />
     <ClCompile Include="..\Src\surfaces\Grid.cpp" />
+    <ClCompile Include="..\Src\surfaces\HermiteSurface.cpp" />
     <ClCompile Include="..\Src\utils\Logger.cpp" />
     <ClCompile Include="..\Src\viewer\Camera.cpp" />
     <ClCompile Include="..\Src\viewer\ShaderProgram.cpp" />
