--- a/Surfaces/Surfaces.vcxproj.filters
+++ b/Surfaces/Surfaces.vcxproj.filters
@@ -54,6 +54,9 @@
     <ClInclude Include="..\Src\curves\GLCurve.h">
       <Filter>Fichiers d%27en-tête</Filter>
     </ClInclude>
+    <ClInclude Include="..\Src\surfaces\DynamicSurface.h">
+      <Filter>Fichiers d%27en-tête</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\Src\viewer\ShaderProgram.cpp">
@@ -87,6 +90,9 @@
       <Filter>Fichiers sources</Filter>
     </ClCompile>
     <ClCompile Include="..\Src\curves\GLCurve.cpp">
+      <Filter>Fichiers sources</Filter>
+    </ClCompile>
+    <ClCompile Include="..\Src\surfaces\DynamicSurface.cpp">
       <Filter>Fichiers sources</Filter>
     </ClCompile>
   </ItemGroup>
