--- a/Surfaces/Surfaces.vcxproj.filters
+++ b/Surfaces/Surfaces.vcxproj.filters
@@ -57,6 +57,9 @@
     <ClInclude Include="..\Src\surfaces\DynamicSurface.h">
       <Filter>Fichiers d%27en-tête</Filter>
     </ClInclude>
+    <ClInclude Include="..\Src\surfaces\CoonsPatch.h">
+      <Filter>Fichiers d%27en-tête</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\Src\viewer\ShaderProgram.cpp">
@@ -93,6 +96,9 @@
       <Filter>Fichiers sources</Filter>
     </ClCompile>
     <ClCompile Include="..\Src\surfaces\DynamicSurface.cpp">
+      <Filter>Fichiers sources</Filter>
+    </ClCompile>
+    <ClCompile Include="..\Src\surfaces\CoonsPatch.cpp">
       <Filter>Fichiers sources</Filter>
     </ClCompile>
   </ItemGroup>
